Fix font and line-breaks in ingredients and method text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,14 @@ label {
    .input-field label {
      color: #000;
    }
+   
+pre {
+    font-family: "Merriweather", serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    white-space: pre-wrap;
+}   
 
 /*Media Queries*/
 @media only screen and (max-width: 992px) {
